Fixed an issue where the 30 panel was causing overflow

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   min-width: 68rem;
-  height: inherit;
+  height: 100%;
   background-color: #e6e9f0;
   font-family:  Roboto;
 }
