--- a/src/Sections/Returns/_userTests/multiInput/MI_100/MultiItemDetails30.css
+++ b/src/Sections/Returns/_userTests/multiInput/MI_100/MultiItemDetails30.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   flex: 1 1 0rem;
+  box-sizing: border-box;
 
   & .mainContent {
     display: flex;
@@ -9,95 +10,97 @@
     flex: 1 1 0rem;
     background-color: #ffffff;
     padding: 1rem;
-  }
+    overflow-y: scroll;
 
-  /*  Item Pic and Description */
-  & .picAndQty {
-    display: flex;
-    flex-direction: row;
-    flex: 0 0 auto;
-    justify-content: space-between;
-
-    & img {
-      height: 8rem;
-    }
-  }
-
-  & .picAndQty div {
-    display: flex;
-    flex: 0 0 auto;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  & .itemCodes {
-    display: flex;
-    flex-direction: row;
-    white-space: nowrap;
-  }
-
-  & .itemDescription {
-    display: flex;
-    flex-direction: column;
-    flex: 0 0 auto;
-    gap: 0.75rem;
-  }
-
-  & .itemDescription h4 {
-    word-break: break-word;
-  }
-
-  /*  Return Reason Tabs */
-
-  & .mrv {
-    &.returnReason {
-      margin-top: 2rem;
+    /*  Item Pic and Description */
+    & .picAndQty {
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       flex: 0 0 auto;
-      gap: 1rem;
-      padding: 2rem 0rem;
-      border-top: var(--primaryBorder);
+      justify-content: space-between;
 
-      & .tabCtnr {
-        display: flex;
-        flex-direction: row;
-        flex: 0 0 auto;
-        width: 100%;
-        gap: 1rem;
+      & img {
+        height: 8rem;
       }
     }
 
-    /* Disposition Selection Panel */
-
-    & .dwnDispoCtnr {
+    & .picAndQty div {
       display: flex;
       flex: 0 0 auto;
-      flex-direction: row;
-      flex-wrap: wrap;
+      flex-direction: column;
+      align-items: center;
     }
 
-    & .ddDisposCtnr {
+    & .itemCodes {
       display: flex;
-      flex: 0 0 auto;
       flex-direction: row;
-      flex-wrap: wrap;
-      gap: 1rem;
+      white-space: nowrap;
+    }
 
-      & .ddDispoBox{
+    & .itemDescription {
+      display: flex;
+      flex-direction: column;
+      flex: 0 0 auto;
+      gap: 0.75rem;
+    }
+
+    & .itemDescription h4 {
+      word-break: break-word;
+    }
+
+    & .mrv {
+      &.returnReason {
+        margin-top: 2rem;
         display: flex;
-        flex: 0 0 48%;
-        align-items: center;
-        flex-direction: row;
-        min-width: 12rem;
-        gap: 0.5rem;
+        width: 100%;
+        flex-direction: column;
+        flex: 0 0 auto;
+        gap: 1rem;
+        padding: 2rem 0rem;
+        border-top: var(--primaryBorder);
 
-        & p{
+        & .tabCtnr {
           display: flex;
-          flex: 1 1 0rem;
+          flex-direction: row;
+          flex: 0 0 auto;
+          width: 100%;
+          gap: 1rem;
+        }
+      }
 
+      /* Disposition Selection Panel */
+
+      & .dwnDispoCtnr {
+        display: flex;
+        flex: 0 0 auto;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 0.75rem;
+      }
+
+      & .ddDisposCtnr {
+        display: flex;
+        flex: 0 0 auto;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 1rem;
+
+        & .ddDispoBox {
+          display: flex;
+          flex: 0 0 40%;
+          align-items: center;
+          flex-direction: row;
+          min-width: 12rem;
+          gap: 0.5rem;
+
+          & p {
+            display: flex;
+            flex: 0 0 auto;
+          }
         }
       }
     }
   }
+
+  /*  Return Reason Tabs */
 }
